# simulartrix

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml
simul_site/: asgi.py  celery.py  gunicorn.conf.py  settings.py  urls.py  wsgi.py
simulartrix/: admin.py  apps.py  models.py  schema.py  types.py
